Update shifts report to be compatible with recent changes. Fixes #801

--- a/app/javascript/stylesheets/admin.scss
+++ b/app/javascript/stylesheets/admin.scss
@@ -63,3 +63,9 @@ body.admin {
     }
   }
 }
+
+.shift-schedule {
+  td {
+    vertical-align: top;
+  }
+}
